<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The Superhero Quiz"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            />
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        >

            <TextView

                style="@style/Question"
                android:text="@string/question1" />

            <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:cropToPadding="false"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/superman" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                style="@style/Options"
                android:text="@string/q1OA"
                android:onClick="qOneRadioB"
                android:id="@+id/qOneA"
                />
            <RadioButton
                style="@style/Options"
                android:text="@string/q1OB"
                android:onClick="qOneRadioB"
                android:id="@+id/qOneB"
                />
            <RadioButton
                style="@style/Options"
                android:text="@string/q1OC"
                android:onClick="qOneRadioB"
                android:id="@+id/qOneC"
                />
            <RadioButton
                style="@style/Options"
                android:text="@string/q1OD"
                android:onClick="qOneRadioB"
                android:id="@+id/qOneD"
                />
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Check"
            android:onClick="qOneButton"
            android:id="@+id/buttonOne"
            />

            <TextView
                android:id="@+id/AnswerA"
                style="@style/Answer"
                android:gravity="center_horizontal"
                android:text="" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp"
            >

            <TextView

                style="@style/Question"
                android:text="@string/question2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:cropToPadding="false"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/kryptonite" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q2OA"
                    android:onClick="qTwoRadioB"
                    android:id="@+id/qTwoA"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q2OB"
                    android:onClick="qTwoRadioB"
                    android:id="@+id/qTwoB"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q2OC"
                    android:onClick="qTwoRadioB"
                    android:id="@+id/qTwoC"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q2OD"
                    android:onClick="qTwoRadioB"
                    android:id="@+id/qTwoD"
                    />
            </RadioGroup>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check"
                android:onClick="qTwoButton"
                android:id="@+id/buttonTwo"
                />

            <TextView
                android:id="@+id/Answer2"
                style="@style/Answer"
                android:gravity="center_horizontal"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp"
            >

            <TextView
                style="@style/Question"
                android:text="@string/question3" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:cropToPadding="false"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/batman" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q3OA"
                    android:onClick="qThreeRadioB"
                    android:id="@+id/qThreeA"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q3OB"
                    android:onClick="qThreeRadioB"
                    android:id="@+id/qThreeB"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q3OC"
                    android:onClick="qThreeRadioB"
                    android:id="@+id/qThreeC"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q3OD"
                    android:onClick="qThreeRadioB"
                    android:id="@+id/qThreeD"
                    />
            </RadioGroup>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check"
                android:onClick="qThreeButton"
                android:id="@+id/buttonThree"
                />

            <TextView
                android:id="@+id/Answer3"
                style="@style/Answer"
                android:gravity="center_horizontal"
                android:text="" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp"
            >

            <TextView
                style="@style/Question"
                android:text="@string/question4" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:cropToPadding="false"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/gotham" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q4OA"
                    android:onClick="qFourRadioB"
                    android:id="@+id/qFourA"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q4OB"
                    android:onClick="qFourRadioB"
                    android:id="@+id/qFourB"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q4OC"
                    android:onClick="qFourRadioB"
                    android:id="@+id/qFourC"
                    />
                <RadioButton
                    style="@style/Options"
                    android:text="@string/q4OD"
                    android:onClick="qFourRadioB"
                    android:id="@+id/qFourD"
                    />
            </RadioGroup>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check"
                android:onClick="qFourButton"
                android:id="@+id/buttonFour"
                />

            <TextView
                android:id="@+id/Answer4"
                style="@style/Answer"
                android:gravity="center_horizontal"
                android:text=""
                android:fontFamily="sans-serif-light"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESET"/>
    </LinearLayout>

</ScrollView>